--- a/nfe_download/views/nfe_mde_view.xml
+++ b/nfe_download/views/nfe_mde_view.xml
@@ -9,11 +9,16 @@
 			<field name="arch" type="xml">
 				<form string="Manifestacao">
 					<header>
-						<button name="action_known_emission" string="Ciência da Emissão" type="object"/>
-						<button name="action_confirm_operation" string="Confirmar Operação" type="object"/>
-						<button name="action_unknown_operation" string="Desconhecer Operação" type="object"/>
-						<button name="action_not_operation" string="Operação não Realizada" type="object"/>
-						<button name="action_download_xml" string="Download do XML" type="object"/>
+						<button name="action_known_emission" string="Ciência da Emissão" 
+							type="object" states="pending"/>
+						<button name="action_confirm_operation" string="Confirmar Operação" 
+							type="object" states="ciente"/>
+						<button name="action_unknown_operation" string="Desconhecer Operação" 
+							type="object" states="ciente"/>
+						<button name="action_not_operation" string="Operação não Realizada" 
+							type="object" states="ciente"/>
+						<button name="action_download_xml" string="Download do XML" 
+							type="object" states="ciente,confirmado,desconhecido,nao_realizado"/>
 					</header>
 					<group>
 						<group>
@@ -30,7 +35,7 @@
 							<field name="tpNF" />
 							<field name="vNF" />						
 							<field name="cSitNFe" />
-							<field name="cSitConf"/>						
+							<field name="state"/>						
 							<field name="formInclusao" />
 							<field name="dataInclusao" />
 						</group>										
@@ -47,9 +52,15 @@
             <field name="model">nfe.mde</field>
             <field name="arch" type="xml">
 				<search string="Filtrar">
-				    <field name="partner_id" string="Parceiro"/>
-				    <field name="cSitConf" string="Situação"/>    
-				    <filter name="situacao" string="Pendentes" domain="[('cSitConf','=','0')]" help="NF-e esperando manifestação"/>
+					<field name="partner_id" string="Fornecedor"/>   
+					<field name="xNome" string="Nome fornecedor"/>
+					<field name="CNPJ" string="Cnpj fornecedor"/>
+				    <field name="state" string="Situação"/>    
+				    <filter name="situacao_pendente" string="Pendentes" domain="[('state','=','pending')]" />
+				    <filter name="situacao_confirmado" string="Confirmados" domain="[('state','=','confirmado')]" />
+				    <filter name="situacao_ciente" string="Ciente da operação" domain="[('state','=','ciente')]" />
+				    <filter name="situacao_desconhecido" string="Desconhecidos" domain="[('state','=','desconhecido')]" />
+				    <filter name="situacao_nao_realizado" string="Não realizados" domain="[('state','=','nao_realizado')]" />
 				</search>
 			</field>
         </record>
@@ -65,7 +76,7 @@
 					<field name="xNome"/>
 					<field name="dEmi"/>
 					<field name="vNF"/>
-					<field name="cSitConf" invisible="1"/>
+					<field name="state" invisible="1"/>
 				</tree>
 			</field>
 		</record>
@@ -76,7 +87,7 @@
 			<field name="view_type">form</field>
 			<field name="view_mode">tree,form</field>
 			<field name="search_view_id" ref="view_nfe_mde_filter"/>
-			<field name="context">{"search_default_situacao":1}</field>
+			<field name="context">{"search_default_situacao_pendente":1}</field>
 		</record>
 		
 		<menuitem name="Manifestação do Destinatário" id="menu_nfe_mde_localizacao" action="action_nfe_mde" parent="l10n_br_account.menu_l10n_br_account_fiscal" />
