[REF] Melhorias no modulo de importacao de xml
Anexado xml a fatura criada

Conta default do parceiro recem criado adicionado a nota

Adicionando categoria e posição fiscal no wizard de importação do xml

Criado nova tela para escolher o produto, verificar cfop e unidade de medida dos itens que não achou corretamente

Corrigido problema de transientmodel e import errado

Adicionando author

--- a/nfe_import/view/l10n_br_account_invoice_import.xml
+++ b/nfe_import/view/l10n_br_account_invoice_import.xml
@@ -12,6 +12,9 @@
                         <group states = "init">
                             <field name="edoc_input" filename="file_name" colspan="2"/>
                             <field name="file_name" colspan="2" invisible="1"/>
+                            <field name="create_partner" />
+                            <field name="fiscal_category_id" domain="[('journal_type','in',('purchase',)),('fiscal_type','=','product'),('type','=','input')]" required="1"/>
+							<field name="fiscal_position" required="1" domain="[('fiscal_category_id', '=', fiscal_category_id)]" />
                         </group>
                         <group states = "done">
                         </group>
