Multiplas melhorias na importacao de xml
Melhoria no cadastro do produto automático

Incremento de tamanho de campo, correção da NCM

Transferindo código de desserialização do account_product para o nfe_import

Modificado desserialização para a nova api

Mapeamento de CFOP e CST para importar o item

Começo da integração com o pedido de compra

Melhorias no módulo de manifesto, removido colunas invalidas, atualizado todas as informações sobre a nota e busca do fornecedor, adicionado xml de retorno como anexo aos documentos

Anexando o xml corretamente nos manifestos e eventos eletronicos

Correçaõ na busca da CST ou CSOSN e inserido campos para creditar impostos na posição fiscal

Busca de impostos e criação correta da movimentação de imposto de acordo com o parametro de crédito de imposto

Criação da movimentação de estoque automática

Criando mapeamento de CFOPS na posição fiscal, removido código que usava mapeamento antigo

Mapeamento atraves da posição fiscal da CFOP, CST e Imposto usado na importação do xml

Integração com pedido de compra e nota fiscal *terminada (frete, transportadora e pagamentos a integrar)

Corrige bug ao selecionar um produto existente ao importar xml - Unidade não setada

--- a/nfe_import/views/nfe_import_view.xml
+++ b/nfe_import/views/nfe_import_view.xml
@@ -6,9 +6,12 @@
 			<field name="name">nfe_import.edit.form</field>
 			<field name="model">nfe.import.edit</field>
 			<field name="arch" type="xml">
-				<form string="Importação de Documento Eletrônico">				
+				<form string="Importação de Documento Eletrônico">
 					<group string="Revisar os itens e setar os produtos faltantes">
 						<group>
+							<field name="import_from_invoice" invisible="1" />
+							<field name="account_invoice_id"
+								attrs="{'invisible': [('import_from_invoice', '=', False)]}" />
 							<field name="supplier_id" />
 							<field name="fiscal_category_id"
 								domain="[('journal_type','in',('purchase',)),('fiscal_type','=','product'),('type','=','input')]"
@@ -17,10 +20,15 @@
 								domain="[('fiscal_category_id', '=', fiscal_category_id)]" />
 						</group>
 						<group>
+							<field name="currency_id" groups="base.group_multi_currency" />
 							<field name="number" />
 							<field name="natureza_operacao" />
-							<field name="amount_total" widget="monetary"  />							
-							<field name="create_product" />
+							<field name="amount_total" widget="monetary"
+								options="{'currency_field': 'currency_id'}" />
+							<field name="create_product"
+								attrs="{'invisible': [('import_from_invoice', '!=', False)]}" />
+							<field name="product_category_id"
+								attrs="{'invisible': ['|', ('create_product', '=', False), ('import_from_invoice', '!=', False)] }" />
 						</group>
 					</group>
 					<group>
@@ -51,6 +59,8 @@
 			<field name="model">nfe.import.products</field>
 			<field name="arch" type="xml">
 				<tree editable="top" create="false" class="nfe_import_tree">
+					<field name="invoice_id" invisible="1" />
+					<field name="invoice_line_id" />
 					<field name="product_id" />
 					<field name="cfop_id" />
 					<field name="uom_id" />
