[MIG] Module nfe_import installable

--- a/nfe_import/views/account_fiscal_position_view.xml
+++ b/nfe_import/views/account_fiscal_position_view.xml
@@ -24,7 +24,7 @@
                     <field name="cfop_src_id" domain="[('type', '=', 'input')]"
                            attrs="{'invisible': [('type', '=', 'output')] }"/>
                 </xpath>
-                <xpath expr="//tree/field[@name='tax_code_dest_id']"
+                <xpath expr="//tree/field[@name='tax_dest_id']"
                        position="after">
                     <field name="cfop_dest_id" domain="[('type', '=', 'input')]"
                            attrs="{'invisible': [('type', '=', 'output')] }"/>
