--- a/nfe/wizard/wizard_nfe_import_xml_view.xml
+++ b/nfe/wizard/wizard_nfe_import_xml_view.xml
@@ -5,7 +5,7 @@
             <field name="name">nfe_import_from_mde.import.xml.form</field>
             <field name="model">nfe_import.account_invoice_import</field>
             <field name="inherit_id"
-                   ref="nfe_import.l10n_br_account_invoice_import_form"/>
+                   ref="nfe.l10n_br_account_invoice_import_form"/>
             <field name="arch" type="xml">
                 <field name="edoc_input" position="after">
                     <field name="nfe_mde_id" string="ou escolha um Manifesto"
